--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,3 @@
- 
 # This is a basic workflow to help you get started with Actions
 
 name: CI
@@ -42,7 +41,6 @@ jobs:
     - name : Install Surge
       run: npm install --global surge
       
-      
  # Deploy Surge
     - name: Deploy React App to Surge
-      run: surge ./build demoSpaceX.surge.sh --token ${{ secrets.Spacex_Secret_token}}
+      run: surge ./build spaceXdemoApp.surge.sh --token ${{ secrets.SECRET_TOKEN_leave_App}}
